--- a/gaiarestframework/templates/djangorestframework/login.html
+++ b/gaiarestframework/templates/djangorestframework/login.html
@@ -7,6 +7,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href='{% get_static_prefix %}djangorestframework/css/style.css'/>
         <title>{% block title %}{% gaia_title %} | {{ name }}{% endblock %}</title>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8">
     </head>
     <body class="login">
         <div id="container">
